# linked-devices-zome

./: .gitignore  404.html  Cargo.toml  README.md  design.html  flake.nix  hashmap.json  index.html  introduction.html  linked-devices-store.html  package.json  pnpm-lock.yaml  setup.html
assets/: app.02_wYyxm.js  app.3225F5Q-.js  app.6jzIwgHm.js  app.BuhGIA6J.js  app.CCLcU9pf.js  app.CYHb5it4.js  app.CawicIkA.js  app.Cl092KGy.js  app.CnxKZEGp.js  app.Cs4OlEDq.js  app.CwDlKVVa.js  app.DWZQQQzj.js  app.DWenQA5l.js  app.DdgscpOP.js  app.DrrRSGo6.js  app.EXnxNDbk.js  app.K9REgLpf.js  app.aFz9HnhH.js  design.md.CkjdBgDK.lean.js  design.md.Dn9wKlpM.js  design.md.DwevSeaV.lean.js  design.md.d3DpZGZC.js  documentation_design.md.CO3NPimN.lean.js  documentation_elements_link-device-recipient.md.pjEEqNtA.js  documentation_elements_link-device-requestor.md.Bh76u-Z5.js  documentation_introduction.md.IYzw7Bhr.lean.js  documentation_linked-devices-store.md.CfrXhr0r.js  documentation_setup.md.D_-0FD0T.js  elements_link-device-recipient.md.5h3eTISq.lean.js  elements_link-device-recipient.md.7OjM-tLT.lean.js  elements_link-device-recipient.md.B9P2-r__.lean.js  elements_link-device-recipient.md.BBAmXcFm.lean.js  elements_link-device-recipient.md.BN3t0RQ-.js  elements_link-device-recipient.md.BUXLTvwb.lean.js  elements_link-device-recipient.md.BXtJDI9z.lean.js  elements_link-device-recipient.md.BYJP7pt-.js  elements_link-device-recipient.md.BgNkoBD8.js  elements_link-device-recipient.md.Bhq78KLV.lean.js  elements_link-device-recipient.md.BnESz5tJ.lean.js  elements_link-device-recipient.md.BrhDSsgx.js  (+136 more)
backend/: .rustc_info.json
docs/: .gitignore  design.md  index.md  introduction.md  link-device-process.md  linked-devices-store.md  package.json  setup.md
documentation/: design.html  introduction.html  linked-devices-store.html  setup.html
elements/: custom-elements.json  link-device-recipient.html  link-device-requestor.html  (+2 more)
tests/: package.json  (+1 more)
zomes/coordinator/linked_devices/: Cargo.toml  zome.nix
zomes/coordinator/linked_devices/src/: agent_to_linked_devices.rs  lib.rs  link_devices.rs  scheduled.rs  utils.rs
zomes/coordinator/linked_devices/tests/common/: mod.rs
(+1033 files in other folders)
