[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*", "zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
# hdi = "0.5.0-rc"
hdi = { version = "0.5.0-rc", features = [ "unstable-functions" ] }
hdk = { version = "0.4.0-rc", features = [ "unstable-functions" ] }
serde = "1.0"
