[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["crates/*", "zomes/coordinator/*", "zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = { version = "0.6", features = [ "unstable-functions" ] }
hdk = { version = "0.5", features = [ "unstable-functions" ] }
serde = "1.0"
