[package]
name = "linked_devices"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "linked_devices"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

linked_devices_integrity = { path = "../../integrity/linked_devices", package = "linked_devices_integrity" }

[dev-dependencies]
fixt = "0.3.1"
futures = { version = "0.3.1", default-features = false }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true }
tokio = { version = "1.3", features = ["full"] }

