[package]
name = "linked_devices"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "linked_devices"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

linked_devices_integrity = { path = "../../integrity/linked_devices", package = "linked_devices_integrity" }
